Bug: Fixed sizing issue on firefox

--- a/src/styles.css
+++ b/src/styles.css
@@ -119,7 +119,7 @@ button:focus {
   flex-direction: column;
   flex-wrap: wrap;
   max-height: 120px;
-  max-width: 120px;
+  min-width: 120px;
   gap: 12px;
   border-radius: 50%;
 }
@@ -164,8 +164,25 @@ button:focus {
   background-color: #457b9d;
 }
 
+.board-p1,
+.board-p2 {
+  /* display: block; */
+  opacity: 1;
+  transition: 
+    opacity 2s ease,
+    dispaly 2s ease allow-discrete;
+}
+
 .hidden {
   display: none;
+  opacity: 0;
+}
+
+@starting-style {
+  .board-p1,
+  .board-p2 {
+    opacity: 0;
+  }
 }
 
 /* HTML: <div class="loader"></div> */
